--- a/lil-homie/package.json
+++ b/lil-homie/package.json
@@ -2,20 +2,22 @@
   "name": "getting-started",
   "version": "1.0.0",
   "description": "Discord example app",
-  "main": "app.js",
+  "main": "app.ts",
   "type": "module",
   "engines": {
     "node": "16.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "register": "node commands.js",
-    "dev": "nodemon app.js"
+    "start": "node dist/app.js",
+    "build": "tsc --project tsconfig.json",
+    "commands": "node dist/deploy-commands.js"
   },
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "discord-interactions": "^3.2.0",
+    "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
