--- a/lil-homie/package.json
+++ b/lil-homie/package.json
@@ -10,17 +10,23 @@
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc --project tsconfig.json",
-    "commands": "node dist/deploy-commands.js"
+    "restart": "tsc --project tsconfig.json && node dist/app.js"
   },
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
+    "@googleapis/youtube": "^9.0.0",
     "discord-interactions": "^3.2.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0"
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.1.0",
+    "googleapis": "^118.0.0",
+    "node-fetch": "^3.3.0",
+    "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
