--- a/lil-homie/package.json
+++ b/lil-homie/package.json
@@ -18,6 +18,7 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "@googleapis/youtube": "^9.0.0",
+    "axios": "^1.4.0",
     "discord-interactions": "^3.2.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
@@ -25,6 +26,7 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "googleapis": "^118.0.0",
+    "node-abort-controller": "^3.1.1",
     "node-fetch": "^3.3.0",
     "ytdl-core": "^4.11.4"
   },
